Changes on 06/23/23 Turned the status bar into a flexbox for better spacing and easier layout adjustment Cleaned up some of the CSS code and adjusted colours and spacing of page layout. Encountering some issues with borders on left side of grid.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color:#d2b48c;
+    background-color: burlywood;
     margin: 0;
     line-height: 30px;
     }
@@ -8,19 +8,31 @@ body {
     width: 100%;
     max-height: 100%;
     text-align: center;
-    margin: auto;
-    
+    align-content: center;
+    margin-top: 0.5rem
     }
+
+#subContainer {
+    width: 97%;
+    align-content: center;
+    margin: auto;
+    border-top-color: rgb(167, 132, 86);
+    border-top-style: solid;
+    border-top-width: 3px;
+    
+}
 
 #title  {
     background-color:bisque;
     text-align: center;
-    margin: auto;
-    max-width: 100%;
-    border-radius: 10px;
-    box-shadow: 5px 5px 15px rgba(0,0,0,.3);
-    height: 30px;
-    margin-bottom: 15px;
+    width: 100%;
+    height: 3.0rem;
+    border-left-color: rgb(167, 132, 86);
+    border-left-style: solid;
+    border-left-width: 3px;
+    border-right-color: rgb(167, 132, 86);
+    border-right-style: solid;
+    border-right-width: 3px;
     }
 
 h1  {
@@ -29,54 +41,55 @@ h1  {
     color:saddlebrown;
     font-weight: bold;
     text-transform: uppercase;
-    padding-left: 5%;
-    padding-right: 5%;
+    
     text-align: center;
+    margin: 0;
     }
 
 .grid  {
-    width: 99%;
-    max-width: 100%;
+    width: 100%;
     margin: 0 auto;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border-radius: 10px;
-    box-shadow: 5px 5px 15px rgba(0,0,0,.3);
+    
     }
     
     
 .row    {
-    flex-wrap: nowrap;
     display: flex;
     margin: auto;        
-    flex-wrap: wrap;
-    justify-content: space-between;
     width: 100%;
+    line-height: 1;
+    border-top:  0.15px solid rgb(167, 132, 86);
+    border-bottom:  0.15px solid rgb(167, 132, 86);
     }
 
 .column {
-    background-color:peru;
-    height: 10%;
+    background-color: bisque;
     padding: 1rem 0;
-    flex: 1;
     gap: 2px;
-    
     align-content: center;
-    border: 0.5px solid rgb(0, 0, 0);
-    display: flex;
-    flex-basis: 1;
-    font-size: 3em;
+    border-color:rgb(167, 132, 86);
+    border-left-style: solid;
+    border-left-width: 0.15px;
+    border-right-style: solid;
+    border-right-width:0.15px;
+    font-size: 1.5rem;
     justify-content: center;   
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: peru;
+    color: bisque;
     cursor: pointer;
     user-select: none;
     }
 
+
+
 .column:hover {
-    background-color:sandybrown;
-    color:sandybrown;
+    background-color: rgb(167, 132, 86);
+    color: rgb(167, 132, 86);
     }
+
+
 
 /*The HTP Modal Close Button*/
 .howToPlayClose {
@@ -182,7 +195,6 @@ button {
     font-size: medium;
     background-color: peru;
     border-radius: 10px;
-    box-shadow: 5px 5px 15px rgba(0,0,0,.3);
     cursor: pointer;
     padding: 1%;
     }
@@ -200,11 +212,11 @@ button {
     font-family: Verdana;
     float: right;
     margin-bottom: 10.1rem;
-    margin-right: 0.3rem;
+    
 }
 
 p   {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-     font-size: 300%;
+     font-size: 100%;
      color: saddlebrown;
      text-align: center;
 
@@ -232,38 +244,41 @@ div {
     
 }
 
-#statusBar {
+.statusBar {
     width: 100%;
-    height: 10%;
+    height: 4rem;
+    display: flex;
+    margin: 0%;
+    border-left-color: rgb(167, 132, 86);
+    border-left-style: solid;
+    border-left-width: 0.15px;
+    border-right-color: rgb(167, 132, 86);
+    border-right-style: solid;
+    border-right-width: 0.15px;
+    border-top-color: rgb(167, 132, 86);
+    border-top-style: solid;
+    border-top-width: 0.85px;
+
+    
     }
 
 #RemainingTurnsCounter  {
-    background-color:bisque;
+    background-color: bisque;
     text-align: center;
-    margin: auto;
-    height: 10%;
-    width: 29%;
-    height: 80px;
-    font-size: large;
-    float: left;
-    border-bottom-left-radius: 10px;
+    margin: 0;
+    
+    height: 4rem;
+    
     font-size: small;
-    border-color: rgb(167, 132, 86);
-    border-left-style: inset;
-    border-left-width: 3px;
-    border-bottom-left-radius: 10px;
-    border-bottom-style: inset;
-    border-bottom-width: 3px;
-    border-right-style: inset;
-    border-right-width: 3px;
+    border-style: none;
     }
 
-#turnCounter    {background-color:bisque;
+#turnCounter    {
+    background-color:bisque;
     text-align: center;
-    margin: auto;
-    width: 20%;
-    padding-bottom: 5%;
-    font-size:2rem
+    margin: 0;
+    font-size: 2rem;
+    line-height: 0.5;
     }
 
 h2  {
@@ -274,7 +289,7 @@ h2  {
     text-transform: uppercase;
     align-content: center;
     text-align: center;
-    margin: 3%;
+    
     line-height: 15px;  
     }
     
@@ -282,17 +297,9 @@ h2  {
 #itemList   {background-color:bisque;
     text-align: center;
     font-size: small;
-    margin: auto;
-    width: 69%;
-    float: right;
-    height: 80px;
-    border-color: rgb(167, 132, 86);
-    border-right-style: inset;
-    border-right-width: 3px;
-    border-bottom-right-radius: 10px;
-    border-bottom-style: inset;
-    border-bottom-width: 3px;
-    margin-left: -2px;
+    margin: 0;
+    height: 4rem;
+    border-style: none;
     }
 
 h3  {
@@ -300,10 +307,8 @@ h3  {
     color:saddlebrown;
     font-weight: bold;
     text-transform: uppercase;
-    padding-left: 5%;
-    padding-right: 5%;
+    width: 50%;
     text-align: center;
-    margin: 3%;
     }
 
 h4 {
@@ -318,19 +323,23 @@ h4 {
     }
 
 #content {
-    min-height: calc(100vh - 375.758px);
-    width: 97%;
+    min-height: calc(100vh - 705.758px);
+    width: 100%;
     align-content: center;
-    margin: auto;
+    border-color: rgb(167, 132, 86);
+    border-style: solid;
+    border-top-width:  0.85px;
+    border-bottom-width: 3px; 
+    border-left-width: 2.85px;
+    border-right-width: 2.85px;
     }
 
 .bar {
     position: relative;
     width: 100%;
-    height: 150px;
+    height: 8rem;
     background-image: linear-gradient(to top, #755c3e 0%, #d2b48c 100%);
-    margin-top: 250px;
-    margin-bottom: -200px;
+    margin-bottom: 0rem;
     border-top: 1px solid rgba(210, 180, 140, 0.3);
     -webkit-background-clip: padding-box;
         background-clip: padding-box; 
@@ -339,8 +348,7 @@ h4 {
     }
 
 svg {
-    
-    margin-top: -40px;
+    margin-top: -15em;
     z-index: 1;
     }
 
@@ -348,7 +356,7 @@ footer {
     background-image: linear-gradient(to top, #209cff 0%, #68e0cf 100%);
     
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-top: -15px;
+    margin-top: -1rem;
     height: 220px;
     }
 
@@ -369,7 +377,6 @@ footer {
     align-content: center;
     border-style:hidden;
     border-radius: 10px;
-    box-shadow: 5px 5px 15px rgba(0,0,0,.3);
     clear: both;
     padding: 2px;
     }
